--- a/PR/index.html
+++ b/PR/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>PR Files</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,41 +39,65 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#client">PR</a>
+              <a class="nav-link js-scroll-trigger" href="../PR/index.html">PR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">CMN</a>
+              <a class="nav-link js-scroll-trigger" href="../CMN/index.html">CMN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Exploration</a>
+              <a class="nav-link js-scroll-trigger" href="../Exploration/index.html">Exploration</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Valuation</a>
+              <div class="dropdown">
+                <a data-toggle="dropdown" class="nav-link anchor-dropdown">
+                  Valuation
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item dropdownMenu" href="../Valuation/index.html">Valuation</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="../Valuation/PMD/index.html">PMD</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="../Valuation/PRO/index.html">PRO</a>
+                  </div>
+                </a>
+              </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#teamMemeber">Foundations</a>
+              <div class="dropdown">
+                <a data-toggle="dropdown" class="nav-link anchor-dropdown">
+                  Foundations
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item dropdownMenu" href="../Foundations/index.html">Foundations</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="../Foundations/PMD/index.html">PMD</a>
+                    <div class="dropdown-divider dropdownMenu"></div>
+                    <a class="dropdown-item dropdownMenu" href="../Foundations/PRO/index.html">PRO</a>
+                  </div>
+                </a>
+              </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#teamMemeber">FD</a>
+              <a class="nav-link js-scroll-trigger" href="../FD/index.html">FD</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#teamMemeber">documents</a>
+                <a class="nav-link js-scroll-trigger" href="../IIVV/index.html">IIVV</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
+<br>
+<br>
+<br>
 
-
-<<!-- Portfolio Grid Section -->
+<!-- Portfolio Grid Section -->
 <section id="ProjectDomain">
     <div class="container">
-        <h2 class="text-center">Project Domain</h2>
+        <h2 class="text-center">PR Files</h2>
         <hr class="star-primary" style="max-width:100%">
         <table class="table table-hover">
             <thead>
-            <tr>
+            <tr style="color:white">
                 <th style="background: #18bc9c">#</th>
                 <th style="background: #18bc9c">File Name</th>
                 <th style="background: #18bc9c">Date</th>
@@ -83,18 +107,80 @@
             <tbody>
             <tr>
                 <th scope="row">1</th>
-                <td>Mark</td>
+                <td><a href="">Week01_MPP_F17a_TXX.mpp</a></td>
+                <td>09/12/2017</td>
+                <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td><a href="">Week01_MPP_F17a_TXX.xls</a></td>
+                <td>09/12/2017</td>
+                <td><i class="material-icons" style="font-size:28px">format_color_text</i></td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td><a href="">Week01_MPP_F17a_TXX.mpp</a></td>
+                <td>09/12/2017</td>
+                <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
+            </tr>
+            <tr>
+                <th scope="row">4</th>
+                <td><a href="">Week01_MPP_F17a_TXX.xls</a></td>
                 <td>09/12/2017</td>
                 <td><i class="material-icons" style="font-size:28px">picture_as_pdf</i></td>
             </tr>
             </tbody>
         </table>
-
-
     </div>
     </div>
 </section>
 
 
+<!-- Footer -->
+    <footer class="text-center">
+      <div class="footer-above" style="height:150px">
+        <div class="container">
+          <div class="row">
+            <div class="footer-col col-md-4">
+              <h3>Organization</h3>
+              <p> University of Southern California
+            </div>
+            <div class="footer-col col-md-4">
+              <h3>Contact</h3>
+              <p><a class="email" href="mailto:shenchen@usc.edu">Chengyu SHEN</a></p>
+            </div>
+            <div class="footer-col col-md-4">
+              <h3>About us</h3>
+              <p>CSCI 577a Fall2017 team04</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-below">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              Copyright &copy; CSCI 577a Team04
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  <!-- Bootstrap core JavaScript -->
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="../js/jqBootstrapValidation.js"></script>
+    <script src="../js/contact_me.js"></script>
+    <script src="../js/newfeatures.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="../js/freelancer.min.js"></script>
 </body>
 </html>
